--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
-    <title>Shubham Gandhi</title>
+    <title>PORTFOLIO</title>
   </head>
   <body>
-    <h1>Shubham Gandhi</h1>
+    <h1>TEST</h1>
+    <img src="images/mypicture.jpg" alt="My Picture" style="width:200px;height:auto;">
+    <p>I am a graduate student at cornell tech</p>
   </body>
 </html>
