--- a/index.html
+++ b/index.html
@@ -21,3 +21,30 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
+
+
+  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin:auto;">
+    <tbody>
+      <tr>
+        <td style="padding:20px;width:100%;vertical-align:middle">
+          <h2>Interests and Work Experience</h2>
+          <p>
+            I'm interested in **Generative Foundation Models, Multimodal Learning, and Federated Learning**.
+            Much of my research focuses on inferring the physical world through **intelligent multimodal AI systems**.
+          </p>
+          <p>
+             **JP Morgan Chase** – Worked in the **commercial and consumer banking** org (Chase) to **detect anomalies in retail transactions**.
+          </p>
+          <p>
+             **College of Engineering, Pune (COEP)** – Designed a **license plate recognition system** to improve **campus security**. Received **institutional grant** for this research.
+          </p>
+          <p>
+             **Tata Research and Development Center (TRDDC)** – Adapted **submodular functions** for **timeline summarization tasks**, preserving the efficiency of **multi-document summarization models**.
+          </p>
+          <p>
+             **Rezoomex (AI Startup)** – Improved **natural language processing (NLP) techniques** for **entity recognition** and **knowledge graph integration**.
+          </p>
+        </td>
+      </tr>
+    </tbody>
+  </table>
