--- a/index.html
+++ b/index.html
@@ -48,3 +48,30 @@
       </tr>
     </tbody>
   </table>
+
+  <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+    <tbody>
+      <tr>
+        <td style="padding:20px;width:100%;vertical-align:middle">
+          <h2>Technical Skills</h2>
+        </td>
+      </tr>
+      <tr>
+        <td width="75%" valign="center">
+          <ul>
+            <li><strong>Programming Languages:</strong> Python, C++, Java, JavaScript</li>
+            <br>
+            <li><strong>Databases:</strong> MySQL, MongoDB, Cassandra</li>
+            <br>
+            <li><strong>Deep Learning:</strong> PyTorch, TensorFlow, CUDA</li>
+            <br>
+            <li><strong>Data:</strong> Apache (Spark, Kafka), BigQuery, Hadoop</li>
+            <br>
+            <li><strong>Machine Learning:</strong> Recommender Systems, Classification, Clustering, DNNs(MLP, Multi-Tower networks, Transformers, Diffusion models)</li>
+            <br>
+            <li><strong>MLOps:</strong> Docker, Kubernetesm Airflow, GCP</li>
+          </ul>
+        </td>
+      </tr>
+    </tbody>
+  </table>
