--- a/index.html
+++ b/index.html
@@ -23,6 +23,51 @@
   </head>
 
 
+  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin:auto;">
+    <tbody>
+      <tr>
+        <td>
+          <table style="width:100%;border:0px;border-spacing:0px;margin:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:2.5%;width:63%;vertical-align:middle">
+                  <p class="name" style="text-align:center;">
+                    SHUBHAM GANDHI
+                  </p>
+                  <p>
+                    I am a Master's student in **Applied Information Science and Information Systems** (Dual Masters) at  
+                    <a href="https://tech.cornell.edu">Cornell Tech</a>, affiliated with the  
+                    <a href="https://cis.cornell.edu/cornell-computing-information-science">College of Computing and Information Science</a>.
+                  </p>
+                  <p>
+                    My coursework includes **Applied Machine Learning, Algorithms II, Human-Robot Interaction, HCI & Design, and Business Fundamentals**.
+                  </p>
+                  <p>
+                    I hold a **B.Tech from the College of Engineering, Pune**, where I researched **Federated Learning for Lesion Detection in Chest X-rays**.
+                  </p>
+                  <p>
+                    Previously, I interned as a **Software Engineer at JP Morgan & Chase**, an **NLP Researcher at TCS Research**, and a **Machine Learning Engineer at Rezoomex AI Startup**.
+                  </p>
+                  <p style="text-align:center">
+                    <a href="mailto:smg384@cornell.edu">Email</a> &nbsp;/&nbsp;
+                    <a href="https://drive.google.com/file/d/1nsfjqULoTxunqaQQVyuiN12hKdtSqvDW/view?usp=share_link">CV</a> &nbsp;/&nbsp;
+                    <a href="https://www.linkedin.com/in/shubham-gandhi-349627169/">LinkedIn</a> &nbsp;/&nbsp;
+                    <a href="https://github.com/gandhi-shubh02">Github</a>
+                  </p>
+                </td>
+  
+                <td style="padding:2.5%;width:40%;max-width:40%">
+                  <a href="images/profile.jpg">
+                    <img style="width:100%;max-width:100%; border-radius: 50%;" alt="Profile Photo" src="images/profile.jpg">
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
+
+
+
   <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin:auto;">
     <tbody>
       <tr>
