--- a/index.html
+++ b/index.html
@@ -21,52 +21,66 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
-
-
-<table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin:auto;">
-  <tbody>
-    <tr>
-      <td>
-        <table style="width:100%;border:0px;border-spacing:0px;margin:auto;">
-          <tbody>
-            <tr>
-              <td style="padding:2.5%;width:63%;vertical-align:middle">
-                <p class="name" style="text-align:center;">
-                  SHUBHAM GANDHI
-                </p>
-                <p>
-                  I am a Master's student in **Applied Information Science and Information Systems** (Dual Masters) at  
-                  <a href="https://tech.cornell.edu">Cornell Tech</a>, affiliated with the  
-                  <a href="https://cis.cornell.edu/cornell-computing-information-science">College of Computing and Information Science</a>.
-                </p>
-                <p>
-                  My coursework includes **Applied Machine Learning, Algorithms II, Human-Robot Interaction, HCI & Design, and Business Fundamentals**.
-                </p>
-                <p>
-                  I hold a **B.Tech from the College of Engineering, Pune**, where I researched **Federated Learning for Lesion Detection in Chest X-rays**.
-                </p>
-                <p>
-                  Previously, I interned as a **Software Engineer at JP Morgan & Chase**, an **NLP Researcher at TCS Research**, and a **Machine Learning Engineer at Rezoomex AI Startup**.
-                </p>
-                <p style="text-align:center">
-                  <a href="mailto:smg384@cornell.edu">Email</a> &nbsp;/&nbsp;
-                  <a href="https://drive.google.com/file/d/1nsfjqULoTxunqaQQVyuiN12hKdtSqvDW/view?usp=share_link">CV</a> &nbsp;/&nbsp;
-                  <a href="https://www.linkedin.com/in/shubham-gandhi-349627169/">LinkedIn</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/gandhi-shubh02">Github</a>
-                </p>
-              </td>
-
-              <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/main.png">
-                  <img style="width:100%; max-width:500px; height:auto; border-radius: 0;" 
-                       alt="Profile Photo" src="images/main.png">
-                </a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-
-
+  <table style="width:100%; max-width:800px; border:0; margin:auto;">
+    <tbody>
+      <tr>
+        <td style="width:50%; vertical-align:top; padding-right:20px;">
+          <img src="images/main.png" style="width:100%; max-width:400px; height:auto; border-radius:10px;">
+        </td>
+  
+        <td style="width:60%; vertical-align:top;">
+          <h1 style="margin:0; font-size:24px;">Shubham Gandhi</h1>
+          <p style="margin:5px 0; font-size:16px; font-weight:bold;">Master's Student, Applied Information Science & Information Systems</p>
+          
+          <p style="margin:5px 0; font-size:14px;">
+            <a href="https://tech.cornell.edu" style="color:#1772d0; text-decoration:none;">
+              Cornell Tech
+            </a>, 
+            <a href="https://cis.cornell.edu/cornell-computing-information-science" style="color:#1772d0; text-decoration:none;">
+              College of Computing and Information Science
+            </a>
+          </p>
+  
+          <p style="margin:5px 0; font-size:14px;">
+            My coursework includes <strong>Applied Machine Learning, Algorithms II, Human-Robot Interaction, HCI & Design, and Business Fundamentals.</strong>
+          </p>
+  
+          <p style="margin:5px 0; font-size:14px;">
+            I hold a <strong>B.Tech from the College of Engineering, Pune</strong>, where I researched <strong>Federated Learning for Lesion Detection in Chest X-rays.</strong>
+          </p>
+  
+          <p style="margin:5px 0; font-size:14px;">
+            I’ve interned at <a href="https://www.jpmorganchase.com" style="color:#1772d0; text-decoration:none;">JP Morgan & Chase</a>,
+            conducted NLP research at <a href="https://www.tcs.com/what-we-do/research" style="color:#1772d0; text-decoration:none;">Tata Research and Development Center</a>, 
+            and worked as a Machine Learning Engineer at <a href="https://rezoomex.com" style="color:#1772d0; text-decoration:none;">Rezoomex</a>.
+          </p>
+  
+          <p style="margin:5px 0;">
+            <a href="mailto:smg384@cornell.edu" style="color:#1772d0; text-decoration:none; font-size:14px;">
+              smg384@cornell.edu
+            </a>
+            &nbsp;&nbsp;|&nbsp;&nbsp;
+            <a href="https://linkedin.com/in/shubham-gandhi-349627169/" style="color:#1772d0; text-decoration:none; font-size:14px;">
+              LinkedIn
+            </a>
+            &nbsp;&nbsp;|&nbsp;&nbsp;
+            <a href="https://github.com/gandhi-shubh02" style="color:#1772d0; text-decoration:none; font-size:14px;">
+              GitHub
+            </a>
+            &nbsp;&nbsp;|&nbsp;&nbsp;
+            <a href="https://drive.google.com/file/d/1nsfjqULoTxunqaQQVyuiN12hKdtSqvDW/view?usp=share_link" style="color:#1772d0; text-decoration:none; font-size:14px;">
+              CV
+            </a>
+          </p>
+  
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  
+  <div style="background:#E6F0FA; padding:15px; margin-top:20px; border-radius:5px; font-size:14px;">
+    <strong>BLAH BLAH BLAH ABLADHD</strong> BALH
+  </div>
 
 
   <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin:auto;">
@@ -119,5 +133,117 @@
           </ul>
         </td>
       </tr>
+    </tbody>
+  </table>
+
+
+  <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+    <tbody>
+      <tr>
+        <td>
+          <h2>Publications</h2>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin:auto;">
+    <tbody>
+
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <img src="data/teaser.png" style="width:100%; height:auto;">
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <p class="papertitle"><strong>Leveraging Knowledge Graphs for Orphan Entity Allocation in Resume Processing</strong></p>
+          <p>Aagam Bakliwal, <strong>Shubham Gandhi</strong>, Yashodhara Haribhakta</p>
+          <p><em>IEEE International Conference on Artificial Intelligence in Engineering and Technology (IICAIET), 2023</em></p>
+          <a href="https://arxiv.org/abs/2310.14093">arXiv</a>
+          <p>This research presents a novel approach for orphan entity allocation in resume processing using knowledge graphs.</p>
+        </td>
+      </tr>
+
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <img src="data/chest.jpeg" style="width:100%; height:auto;">
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <p class="papertitle"><strong>Federated Learning for Lesion Detection in Chest X-rays</strong></p>
+          <p><strong>Shubham Gandhi</strong>, Aagam Bakliwal, Yashodhara Haribhakta</p>
+          <p><em>B.Tech Thesis, March 2024</em></p>
+          <p><strong>Awarded UG Project Competition 2024 (1st in department, 3rd institution-wide)</strong></p>
+          <a href="https://drive.google.com/file/d/11v67i8wMprE330CF-VQhuMd1LQEuioQ5/view?usp=share_link-1">View Report</a>
+          <p>Trained on VinBigData’s dataset using YOLOv9 and VGG16 to detect lesions in chest X-rays.</p>
+        </td>
+      </tr>
+
+     
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <img src="data/FSDP.png" style="width:100%; height:auto;">
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <p class="papertitle"><strong>Comparative Analysis of Distributed Training Strategies for GPT-2</strong></p>
+          <p>Ishan Pathwardhan, <strong>Shubham Gandhi</strong>, Om Khare, Yashodhara Haribhakta</p>
+          <p><em>Under Review - International Journal Of Parallel Computing, February 2024</em></p>
+          <a href="https://arxiv.org/pdf/2405.15628">arXiv</a>
+          <p>Analyzed Fully Sharded Data Parallel (FSDP) and Distributed Data-Parallel (DDP) strategies for training GPT-2.</p>
+        </td>
+      </tr>
+
+    </tbody>
+  </table>
+  
+
+
+  <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+    <tbody>
+      <tr>
+        <td>
+          <h2>Projects</h2>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin:auto;">
+    <tbody>
+
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <img src="data/ocr.png" style="width:100%; height:auto;">
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <p class="papertitle"><strong>NVIDIA Jetson-Enabled Real-Time License Plate OCR</strong></p>
+          <p><em>January 2024</em></p>
+          <a href="https://github.com/gandhi-shubh02/Real-Time-License-Plate-OCR">GitHub Repository</a>
+          <p>Used YOLOv8 and Tesseract to detect and extract license plates in real-time with an accuracy of 92%, deployed on NVIDIA Jetson.</p>
+        </td>
+      </tr>
+
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <img src="data/pothole.png" style="width:100%; height:auto;">
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <p class="papertitle"><strong>YOLOv8-Based Visual Detection of Road Hazards</strong></p>
+          <p><em>IEEE PuneCon 2023</em></p>
+          <a href="https://arxiv.org/abs/2311.00073">arXiv</a>
+          <p>Evaluated YOLOv8’s performance in detecting potholes and compared it with YOLOv5 and YOLOv7 for better safety applications.</p>
+        </td>
+      </tr>
+
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <img src="data/corl.png" style="width:100%; height:auto;">
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <p class="papertitle"><strong>Enhanced Security Using a Randomized Key Matrix in Symmetric Substitution Ciphers</strong></p>
+          <p><em>December 2023</em></p>
+          <a href="https://arxiv.org/abs/2311.18085">arXiv</a>
+          <p>Proposed a security enhancement using a randomized key matrix for symmetric substitution ciphers, evaluated for computational speed and entropy.</p>
+        </td>
+      </tr>
+
     </tbody>
   </table>
