--- a/index.html
+++ b/index.html
@@ -20,14 +20,25 @@
     <meta property="og:type" content="website">
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1DG1D1138E"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-1DG1D1138E');
+    </script>
   </head>
+
+
+  
   <div id="about">
   <table style="width:100%; max-width:800px; border:0; margin:auto;">
     <tbody>
       <tr>
         <td style="width:50%; vertical-align:top; padding-right:20px;">
-          <img src="images/main.png" style="width:100%; max-width:400px; height:auto; border-radius:10px;">
-        </td>
+          <img src="images/main.png" class="clip-circle" alt="Circular Image">       
+         </td>
   
         <td style="width:60%; vertical-align:top;">
           <h1 style="margin:0; font-size:24px;">Shubham Gandhi</h1>
@@ -78,9 +89,26 @@
       </tr>
     </tbody>
   </table>
+  <div class="section">
+    <h2>I LOVE DAD JOKES!</h2>
+    <p id="dad-joke">Click the button below to load a dad joke!</p>
+    <button onclick="fetchDadJoke()">Get Joke</button>
+    <br>
+    <br>
+    <br>
+  <details>
+    <summary>Click here for a fun fact about me</summary>
+    <p>I am former world record holder for eating baby food!</p>
+  </details>
+  <br>
+  <br>
+  <br>
+  <button id="dark-mode-toggle">🌙 Toggle Dark Mode</button>
 </div>
 
-<nav class="navbar" style="background:#E6F0FA; padding:15px; margin-top:20px; border-radius:5px; font-size:15px;">
+
+
+<nav class="navbar" >
   <a href="#about">About</a>
   <span class="divider">|</span>
   <a href="#ex">Experience</a>
@@ -104,14 +132,14 @@
     </ul>
   </div>
 
-  <div  id='ts 'class="section">
+  <div  id='ts' class="section">
     <h2>Technical Skills</h2>
     <ul class="skills-list">
       <li><strong>Programming Languages:</strong> Python, C++, Java, JavaScript</li>
       <li><strong>Databases:</strong> MySQL, MongoDB, Cassandra</li>
       <li><strong>Deep Learning:</strong> PyTorch, TensorFlow, CUDA</li>
       <li><strong>Data:</strong> Apache (Spark, Kafka), BigQuery, Hadoop</li>
-      <li><strong>Machine Learning:</strong> Recommender Systems, Classification, Clustering, DNNs (MLP, Multi-Tower networks, Transformers, Diffusion models)</li>
+      <li><strong>Machine Learning:</strong> RecSys, Classification, Clustering, DNNs (MLP, Multi-Tower networks, Transformers, Diffusion models)</li>
       <li><strong>MLOps:</strong> Docker, Kubernetes, Airflow, GCP</li>
     </ul>
   </div>
@@ -186,3 +214,35 @@
     </div>
   </div>
 </div>
+
+<script>
+  async function fetchDadJoke() {
+    try {
+      const response = await fetch('https://icanhazdadjoke.com/', {
+        headers: { 'Accept': 'application/json' }
+      });
+      const data = await response.json();
+      document.getElementById('dad-joke').innerText = data.joke;
+    } catch (error) {
+      document.getElementById('dad-joke').innerText = "Oops! Couldn't fetch a joke. Try again!";
+    }
+  }
+
+  function toggleDarkMode() {
+    document.body.classList.toggle('dark-mode');
+
+    if (document.body.classList.contains('dark-mode')) {
+      localStorage.setItem('darkMode', 'enabled');
+    } else {
+      localStorage.setItem('darkMode', 'disabled');
+    }
+  }
+
+  window.onload = function() {
+    if (localStorage.getItem('darkMode') === 'enabled') {
+      document.body.classList.add('dark-mode');
+    }
+  };
+
+  document.getElementById('dark-mode-toggle').addEventListener('click', toggleDarkMode);
+</script>
