--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta property="og:title" content="Shubham Gandhi">
     <meta property="og:description" content="Portfolio of Shubham Gandhi">
-    <meta property="og:image" content="images/picture.jpg">
+    <meta property="og:image" content="https://gandhi-shubh02.github.io/images/main.png">
     <meta property="og:url" content="https://gandhi-shubh02.github.io/">
     <meta property="og:type" content="website">
 
