--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<body>
+  <div class="main-container">
+
+
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
@@ -36,22 +40,20 @@
     <table style="width:100%; max-width:800px; border:0; margin:auto; display:flex; align-items:center;">
       <tbody>
         <tr style="display: flex; align-items: center;">
-          <!-- Image Column -->
-          <td style="width:50%; padding-right:20px;">
+          <td style="width:50%; padding-right:0px;">
             <img src="images/main.png" class="clip-circle" alt="Profile Image">       
           </td>
   
-          <!-- Name & Info Column -->
           <td style="width:50%; text-align:left;">
-            <h1 style="margin:0; font-size:34px;">Shubham Gandhi</h1>
-            <p style="margin:5px 0; font-size:16px; font-weight:bold;">Dual Master's candidate at Cornell University</p>
+            <h1 style="margin:0; margin-top: 50px; font-size:36px;">Shubham Gandhi</h1>
+            <p style="margin:2px 0; font-size:17px; font-weight:bold;">Dual Master's candidate at Cornell University</p>
   
-            <p style="margin:5px 0; font-size:14px;">
+            <p style="margin:2px 0; font-size:15px;">
               <a href="https://tech.cornell.edu" style="color:#1772d0; text-decoration:none;">
                 Cornell Tech
               </a>, 
               <a href="https://cis.cornell.edu/cornell-computing-information-science" style="color:#1772d0; text-decoration:none;">
-                College of Computing and Information Science
+                 Department of Computer Science
               </a>
             </p>
   
@@ -68,7 +70,7 @@
               GitHub
             </a>
             &nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="https://drive.google.com/file/d/1nsfjqULoTxunqaQQVyuiN12hKdtSqvDW/view?usp=share_link" style="color:#1772d0; text-decoration:none; font-size:14px;">
+            <a href="https://drive.google.com/file/d/152PYgxuluLotRakSKk2Z7aKPEF7p-GI2/view?usp=share_link" style="color:#1772d0; text-decoration:none; font-size:14px;">
               CV
             </a>
           </p>
@@ -79,14 +81,14 @@
     </tbody>
   </table>
   <div class="section">
-    <h2>I LOVE DAD JOKES!</h2>
+    <h2>API CALL FOR HW3</h2>
     <p id="dad-joke">Click the button below to load a dad joke!</p>
     <button onclick="fetchDadJoke()">Get Joke</button>
     <br>
     <br>
     <br>
   <details>
-    <summary>Click here for a fun fact about me</summary>
+    <summary>Click here for a fun fact about me </summary>
     <p>I am former world record holder for eating baby food!</p>
   </details>
   <br>
@@ -108,24 +110,17 @@
 </nav>
 
   <div id='ex' class="section">
-    <h2>Interests and Work Experience</h2>
-    <p style="margin:5px 0; font-size:14px;">
-      I have a strong background in applied machine learning, algorithms, and foundation models. My aspirations revolve around generative foundation models and multimodal learning. Much of my work is about inferring the physical world through intelligent multimodal AI systems.
+    <h2>About</h2>
+    <p style="margin:5px 0; font-size:16px;">
+      I have a strong background in applied machine learning, algorithms, and foundation models. My aspirations revolve around generative foundation models and multimodal learning. With a passion for democratizing access to technology, much of my work is about developing intentional, adaptive agents capable of interpreting and interacting with the physical world in shared environments.
     </p>
-    <p style="margin:5px 0; font-size:14px;">
+    <p style="margin: 0px; font-size:16px;">
       My coursework includes <strong>Applied Machine Learning, Algorithms, Human-Robot Interaction, Natural Language Processing, Computer Vision, and Data Science.</strong>          </p>
 
-    <p style="margin:5px 0; font-size:14px;">
+    <p style="margin:5px 0; font-size:16px;">
       I have previously interned at <a href="https://www.jpmorganchase.com" style="color:#1772d0; text-decoration:none;">JP Morgan & Chase</a>,
-      worked as a research assistant  <a href="https://www.tcs.com/what-we-do/research" style="color:#1772d0; text-decoration:none;">Tata Research and Development Center (TCS)</a>, and served as a Machine Learning Engineer intern at  <a href="https://rezoomex.com" style="color:#1772d0; text-decoration:none;">Rezoomex (AI Startup)</a>.
+      worked as a research assistant at <a href="https://www.tcs.com/what-we-do/research" style="color:#1772d0; text-decoration:none;">Tata Research and Development Center (TCS)</a>, and served as a Machine Learning Engineer intern at  <a href="https://rezoomex.com" style="color:#1772d0; text-decoration:none;">Rezoomex (AI Startup)</a>.
     </p>
-
-    <ul>
-      <li><strong>JP Morgan Chase</strong> – Worked in the <strong>commercial and consumer banking</strong> org (Chase) to <strong>detect anomalies in retail transactions</strong>.</li>
-      <li><strong>College of Engineering, Pune (COEP)</strong> – Designed a <strong>license plate recognition system</strong> to improve <strong>campus security</strong>. Received an <strong>institutional grant</strong> for this research.</li>
-      <li><strong>Tata Research and Development Center (TRDDC)</strong> – Adapted <strong>submodular functions</strong> for <strong>timeline summarization tasks</strong>, preserving the efficiency of <strong>multi-document summarization models</strong>.</li>
-      <li><strong>Rezoomex (AI Startup)</strong> – Improved <strong>natural language processing (NLP) techniques</strong> for <strong>entity recognition</strong> and <strong>knowledge graph integration</strong>.</li>
-    </ul>
   </div>
 
   <div  id='ts' class="section">
@@ -144,7 +139,7 @@
 <div id='pub'class="section">
   <h2>Publications</h2>
   <div class="publication">
-    <img src="data/teaser.png" alt="Publication">
+    <img src="images/teaser.png" alt="missing">
     <div>
       <p class="papertitle"><strong>Leveraging Knowledge Graphs for Orphan Entity Allocation in Resume Processing</strong></p>
       <p>Aagam Bakliwal, <strong>Shubham Gandhi</strong>, Yashodhara Haribhakta</p>
@@ -155,19 +150,19 @@
   </div>
 
   <div class="publication">
-    <img src="data/chest.jpeg" alt="Publication">
+    <img src="images/chest.jpeg" alt="missing">
     <div>
       <p class="papertitle"><strong>Federated Learning for Lesion Detection in Chest X-rays</strong></p>
       <p><strong>Shubham Gandhi</strong>, Aagam Bakliwal, Yashodhara Haribhakta</p>
       <p><em>B.Tech Thesis, March 2024</em></p>
-      <p><strong>Awarded UG Project Competition 2024 (1st in department, 3rd institution-wide)</strong></p>
+      <p><strong>Awarded Best Thesis 2024 (1st in department, 3rd institution-wide)</strong></p>
       <a href="https://drive.google.com/file/d/11v67i8wMprE330CF-VQhuMd1LQEuioQ5/view?usp=share_link">View Report</a>
-      <p>Trained on VinBigData’s dataset using YOLOv9 and VGG16 to detect lesions in chest X-rays.</p>
+      <p>Collaboratively trained on VinBigData’s dataset using YOLOv9 and VGG16 to detect lesions in chest X-rays.</p>
     </div>
   </div>
 
   <div class="publication">
-    <img src="data/FSDP.png" alt="Publication">
+    <img src="images/FSDP.png" alt="missing">
     <div>
       <p class="papertitle"><strong>Comparative Analysis of Distributed Training Strategies for GPT-2</strong></p>
       <p>Ishan Pathwardhan, <strong>Shubham Gandhi</strong>, Om Khare, Yashodhara Haribhakta</p>
@@ -176,40 +171,113 @@
       <p>Compared Fully Sharded Data Parallel (FSDP) and Distributed Data-Parallel (DDP) for GPT-2 training.</p>
     </div>
   </div>
-</div>
-
-<div  id ='proj'class="section">
-  <h2>Projects</h2>
-  <div class="project">
-    <img src="data/ocr.png" alt="Project">
-    <div>
-      <p class="papertitle"><strong>NVIDIA Jetson-Enabled Real-Time License Plate OCR</strong></p>
-      <p><em>January 2024</em></p>
-      <a href="https://github.com/gandhi-shubh02/Real-Time-License-Plate-OCR">GitHub Repository</a>
-      <p>Used YOLOv8 and Tesseract to detect and extract license plates in real-time with 92% accuracy, deployed on NVIDIA Jetson.</p>
-    </div>
-  </div>
-
-  <div class="project">
-    <img src="data/pothole.png" alt="Project">
+  <div class="publication">
+    <img src="images/pothole.png" alt="missing">
     <div>
       <p class="papertitle"><strong>YOLOv8-Based Visual Detection of Road Hazards</strong></p>
+      <p>Om M. Khare, <strong>Shubham Gandhi</strong>, Aditya M. Rahalkar, Sunil Mane</p>
       <p><em>IEEE PuneCon 2023</em></p>
       <a href="https://arxiv.org/abs/2311.00073">arXiv</a>
       <p>Evaluated YOLOv8’s performance in detecting potholes and compared it with YOLOv5 and YOLOv7 for better safety applications.</p>
     </div>
   </div>
 
-  <div class="project">
-    <img src="data/corl.png" alt="Project">
+  <div class="publication">
+    <img src="images/corl.png" alt="missing">
     <div>
       <p class="papertitle"><strong>Enhanced Security Using a Randomized Key Matrix in Symmetric Substitution Ciphers</strong></p>
+      <p><strong>Shubham Gandhi</strong>, Et al.</p>
       <p><em>December 2023</em></p>
       <a href="https://arxiv.org/abs/2311.18085">arXiv</a>
       <p>Proposed a security enhancement using a randomized key matrix for symmetric substitution ciphers, evaluated for computational speed and entropy.</p>
     </div>
   </div>
 </div>
+</div>
+<div id='proj' class="section">
+  <h2>Projects</h2>
+
+  <div class="project">
+    <img src="images/hybrid.jpg" alt="Project">
+    <div>
+      <p class="papertitle"><strong>Computer Vision Projects</strong></p>
+      <p><em>Jan 2025 - Present</em></p>
+      <a href="https://github.com/gandhi-shubh02/SeamCarving">GitHub Repository</a>
+
+      <p>Worked on various computer vision tasks including Hybrid Images, Feature Detection & Matching, Seam Carving, and Panorama Stitching.</p>
+    </div>
+  </div>
+
+  <div class="project">
+    <img src="images/churn.jpg" alt="Project">
+    <div>
+      <p class="papertitle"><strong>Customer Churn Prediction</strong></p>
+      <p><em>December 2024</em></p>
+      <a href="https://github.com/abjR265/Churn-Prediction">GitHub Repository</a>
+
+      <p>Implemented Decision Tree, Random Forest, Gradient Boosting, and Stacking Ensemble models to predict customer churn. Conducted feature engineering and exploratory data analysis, applying SMOTE to address dataset imbalance. Achieved an AUROC score of 0.89 and deployed the model on Google Cloud Platform using Vertex AI for real-time predictions, reducing churn identification time by 40%.</p>
+    </div>
+  </div>
+
+  <div class="project">
+    <img src="images/ros.jpg" alt="Project">
+    <div>
+      <p class="papertitle"><strong>Interactive Robotic Drawing Game – RoboSketch</strong></p>
+      <p><em>October 2024</em></p>
+      <a href="https://github.com/Cornell-Tech-Intro-HRI-2024/crayola">GitHub Repository</a>
+
+      <p>Designed and implemented an interactive robotic drawing game on a TurtleBot4 using ROS2. Utilized DepthAI with a Mobilenet model for real-time RGB-based human detection and tracking, enabling the robot to follow participants accurately. Integrated drawing functionality and auditory feedback using gTTS for dynamic interactions.</p>
+    </div>
+  </div>
+
+  <div class="project">
+    <img src="images/ocr.png" alt="Project">
+    <div>
+      <p class="papertitle"><strong>NVIDIA Jetson-Enabled Real-Time License Plate OCR</strong></p>
+      <p><em>January 2024</em></p>
+      <a href="https://github.com/gandhi-shubh02/Real-Time-License-Plate-OCR">GitHub Repository</a>
+      <p>Used YOLOv8 and Tesseract to detect and extract license plates in real-time with 92% accuracy, deployed on NVIDIA Jetson.</p>
+    </div>
+  </div> 
+
+  <div class="project">
+    <img src="images/rev.jpg" alt="Project">
+    <div>
+      <p class="papertitle"><strong>Evaluate Helpfulness in Amazon Reviews</strong></p>
+      <p><em>July 2022</em></p>
+      <a href="https://github.com/gandhi-shubh02/Evaluate-Helpfulness-in-Amazon-Reviews">GitHub Repository</a>
+
+      <p>Built a ranking and relevance model to classify product reviews for Amazon customers. Used Automated Readability Index (ARI), text length, punctuation, and feedback analysis. Evaluated models like KNN, SVM, and Gaussian Naive Bayes classifiers for effectiveness.</p>
+    </div>
+  </div>
+
+  <div class="project">
+    <img src="images/tweet.jpg" alt="Project">
+    <div>
+      <p class="papertitle"><strong>Trending Tweets Analysis</strong></p>
+      <p><em>May 2022 </em></p>
+      <a href="https://github.com/gandhi-shubh02/Trending-Tweets-Analysis">GitHub Repository</a>
+
+      <p>Developed a reply ranking system for tweets using the Tweepy module and Twitter Streaming API. Collected tweets based on geolocation and surfaced trending topics. Implemented a Directed Acyclic Graph (DAG) to fetch the tweet with the highest reply count.</p>
+    </div>
+  </div>
+
+  <div class="project">
+    <img src="images/chef.jpg" alt="Project">
+    <div>
+      <p class="papertitle"><strong>Automated Engine to Recommend Recipes</strong></p>
+      <p><em>October 2021 </em></p>
+      <a href="https://github.com/gandhi-shubh02/-Recipe-Recommendation-Engine">GitHub Repository</a>
+
+      <p>Utilized BOW and Word2Vec to map 100k+ ingredients to a superset of 7 cuisines, evaluating ML models such as KNN, Logistic Regression, and a simple NN with a SoftMax classifier. Integrated with Alexa Voice Skill and designed conversational flow. Performed feature engineering and handled data imbalance/bias.</p>
+    </div>
+  </div>
+
+</div> 
+
+
+
+
 
 <script>
   async function fetchDadJoke() {
@@ -242,3 +310,7 @@
 
   document.getElementById('dark-mode-toggle').addEventListener('click', toggleDarkMode);
 </script>
+
+         
+</div>
+</body>
